--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,6 +6,6 @@
       href="/flights/new" <%- title === 'Add Flight' ? 'class="active"' : '' %>
     >ADD FLIGHT</a>
     <a 
-      href="/movies" <%- title === 'All Flights' ? 'class="active"' : '' %>
+      href="/flights" <%- title === 'All Flights' ? 'class="active"' : '' %>
     >ALL FLIGHTS</a>
   </nav>
