--- a/views/destinations/new.ejs
+++ b/views/destinations/new.ejs
@@ -4,7 +4,7 @@
 
 <main>
 	<h1><%= title %></h1>
-  <p>
+  <p>Please select a destination
     <select>
       <% destinations.forEach(function(destination) { %>
         <option><%= destination.airport %></option>
