--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,4 +8,7 @@
     <a 
       href="/flights" <%- title === 'All Flights' ? 'class="active"' : '' %>
     >ALL FLIGHTS</a>
+    <a
+    href="/destinations/new" <%- title === 'Add Destinations' ? 'class="active"' : '' %> 
+    >ADD DESTINATION</a>
   </nav>
